@@ -9,6 +9,8 @@
  * For the full copyright and license information, please view the LICENSE
  *  file that was distributed with this source code.
  *
+ * @since 2.0.3
+ *
  * @license MIT
  */
 
@@ -16,5 +18,5 @@ namespace Zest\Common;
 
 class Version
 {
-    const VERSION = '2.0.3';
+    const VERSION = '3.0.0';
 }
