@@ -9,6 +9,9 @@
  * For the full copyright and license information, please view the LICENSE
  *  file that was distributed with this source code.
  *
+ * @since 1.9.7
+ * @deprecated 3.0.0
+ *
  * @license MIT
  */
 
